Update to spring boot 3.1.2